--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><u>30-07-2024</u>~pseudo selectors</h1>
+    <h1><u>30-07-2024</u>~pseudo selectors task</h1>
     <a href="/30.07.2024/psuedo selectors/calender.html">calender</a><br>
     <a href="/30.07.2024/psuedo selectors/chess.html">chess</a><br>
     <a href="/30.07.2024/psuedo selectors/nav.html">nav bar</a><br><br>
